--- a/src/app/ugyfel/ugyfel-tabla/ugyfel-tabla.component.html
+++ b/src/app/ugyfel/ugyfel-tabla/ugyfel-tabla.component.html
@@ -23,6 +23,12 @@
       </div>
     </th>
     <th>
+      <div>
+        <div>Tevékenység</div>
+        <div></div>
+      </div>
+    </th>
+    <th>
       <div style="white-space: nowrap">
         <div>Adószám</div>
         <div>EU adószám</div>
@@ -63,6 +69,10 @@
         <td>
           <div>{{item.Email}}</div>
           <div>{{item.Telefon}}</div>
+        </td>
+        <td>
+          <div>{{item.Tevekenyseg}}</div>
+          <div></div>
         </td>
         <td>
           <div>{{item.Adoszam}}</div>
