újabb lépések az ügyfélkapcsolatban +

--- a/src/app/ugyfel/ugyfel-list/ugyfel-list.component.html
+++ b/src/app/ugyfel/ugyfel-list/ugyfel-list.component.html
@@ -112,7 +112,7 @@
       </ng-container>
       <ng-container *ngIf="egymode === 37">
         <div [@rowanimation]>
-          <app-ugyfel-kapcsolat>
+          <app-ugyfel-kapcsolat [Ugyfelkod]="Dto[DtoSelectedIndex].Ugyfelkod">
 
           </app-ugyfel-kapcsolat>
         </div>
