--- a/src/app/ugyfelkapcsolat/ugyfel-kapcsolat/ugyfel-kapcsolat.component.html
+++ b/src/app/ugyfelkapcsolat/ugyfel-kapcsolat/ugyfel-kapcsolat.component.html
@@ -41,11 +41,40 @@
   </app-ugyfelkapcsolat-tabla>
 
   <ng-template #griduj>
-    <app-ugyfelkapcsolat-szerkesztes [Ugyfelkod]="Ugyfelkod">
+    <app-ugyfelkapcsolat-szerkesztes [Ugyfelkod]="Ugyfelkod"
+                                     (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-ugyfelkapcsolat-szerkesztes>
   </ng-template>
 
   <ng-template #gridegy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="!jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="ugyfelkapcsolatservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="ugyfelkapcsolatservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="ugyfelkapcsolatservice.cim"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 
   <app-toolbarfooter [enKereses]="!elsokereses"
