--- a/src/app/ugyfelkapcsolat/ugyfelkapcsolat-szerkesztes/ugyfelkapcsolat-szerkesztes.component.html
+++ b/src/app/ugyfelkapcsolat/ugyfelkapcsolat-szerkesztes/ugyfelkapcsolat-szerkesztes.component.html
@@ -24,9 +24,10 @@
     <div class="row no-gutters editform-row">
       <div style="margin-right: 5px">
         <div class="egylabel">Leírás</div>
-        <input type="text" class="form-control form-control-sm oszlop6" id="telepitesicim"
+        <textarea rows="5" class="form-control form-control-sm" style="width: 500px" id="telepitesicim"
                autocomplete="off"
                [(ngModel)]="DtoEdited.Leiras" name="telepitesicim">
+        </textarea>
       </div>
     </div>
 
