--- a/src/app/ugyfelkapcsolat/ugyfelkapcsolat-tabla/ugyfelkapcsolat-tabla.component.html
+++ b/src/app/ugyfelkapcsolat/ugyfelkapcsolat-tabla/ugyfelkapcsolat-tabla.component.html
@@ -43,7 +43,7 @@
           <div>{{item.Tevekenyseg}}</div>
         </td>
         <td>
-          <div style="width: 500px">{{item.Leiras}}</div>
+          <div style="width: 500px;white-space: pre-wrap">{{item.Leiras}}</div>
         </td>
       </tr>
 
