kapcsolati háló alapok

--- a/src/app/kapcsolatihalo/kapcsolati-halo/kapcsolati-halo.component.html
+++ b/src/app/kapcsolatihalo/kapcsolati-halo/kapcsolati-halo.component.html
@@ -1,4 +1,4 @@
-<div #akDiv class="alapkeret">
+<div #akDiv class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Kapcsolati háló</h5>
   <div  id="cy" [style.width.px]="cytowidth" [style.height.px]="cytoheight" style="border: 1px solid silver"></div>
 </div>
