--- a/src/app/fooldal/fooldal.component.html
+++ b/src/app/fooldal/fooldal.component.html
@@ -1,13 +1,4 @@
-<ng-container *ngIf="!szerepkorkivalasztva">
-  <div class="alapkeret">
-    <h5>Üdvözöljük</h5>
-    Kérjük jelentkezzen be ill. válasszon szerepkört!
-  </div>
-</ng-container>
-<ng-container *ngIf="szerepkorkivalasztva">
-  <app-esemenynaplo [Felhasznalokod]="felhasznalokod">
-  </app-esemenynaplo>
-</ng-container>
+<img src="assets/fooldal.png" class="hatterkep" #hatterkep>
 
 
 
