projekt teendő -> jegyzet 1

--- a/src/app/projekt/projekt-list/projekt-list.component.html
+++ b/src/app/projekt/projekt-list/projekt-list.component.html
@@ -71,7 +71,7 @@
             Iratminta
           </button>
           <button (click)="doNav(26)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            Teendő
+            Jegyzet
           </button>
           <button (click)="doNav(25)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
             Számlázási rend
