--- a/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylat-szerkesztes/bizonylat-szerkesztes.component.html
@@ -53,7 +53,7 @@
     </div>
     <div class="col-md-4">
       <input type="text" class="form-control form-control-sm" id="megjegyzes"
-             maxlength="200" autocomplete="off"
+             autocomplete="off"
              [(ngModel)]="ComplexDtoEdited.Dto.Megjegyzesfej" name="megjegyzes">
     </div>
     <div class="col-md-3">
