--- a/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
+++ b/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
@@ -68,8 +68,7 @@
       </ng-container>
       <ng-container *ngIf="egymode === 38">
         <div [@rowanimation]>
-          <app-pdfnezet>
-
+          <app-pdfnezet [pdf]="pdf">
           </app-pdfnezet>
         </div>
       </ng-container>
