--- a/src/app/dokumentum/pdfnezet/pdfnezet.component.html
+++ b/src/app/dokumentum/pdfnezet/pdfnezet.component.html
@@ -1,3 +1,7 @@
 <div class="alapkeret">
   <h5>Nézet</h5>
+  <div style="width: 100vh">
+    <ngx-extended-pdf-viewer [base64Src]="pdf" height="50vh" [showOpenFileButton]="false" [zoom]="'page-width'" [textLayer]="true">
+    </ngx-extended-pdf-viewer>
+  </div>
 </div>
