--- a/src/app/fotozas/fotozas/fotozas.component.html
+++ b/src/app/fotozas/fotozas/fotozas.component.html
@@ -32,7 +32,14 @@
       <tbody>
       <tr *ngFor="let item of Dto.dokumentumDto">
         <td>{{item.Dokumentumkod}}</td>
-        <td>{{item.Megjegyzes}}</td>
+        <td>
+          <div>
+            {{item.Megjegyzes}}
+          </div>
+          <div *ngIf="item.Imgprev !== null">
+            <img [src] = "'data:image/jpg;base64,' + item.Imgprev"/>
+          </div>
+        </td>
         <td>{{item.Meret}}</td>
         <td>{{item.Ext}}</td>
       </tr>
