OFT szerződés előkészítés

--- a/src/app/iratminta/projekt-iratminta.component.html
+++ b/src/app/iratminta/projekt-iratminta.component.html
@@ -11,6 +11,9 @@
       <button (click)="feltetelesszerzodes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Feltételes szerződés
       </button>
+      <button (click)="oftszerzodes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+        OFT szerződés
+      </button>
       <button (click)="munkalap()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Munkalap
       </button>
@@ -24,7 +27,7 @@
         E.ON készrejelentés
       </button>
       <button (click)="demasz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        NKM készrejelentés
+        MVM készrejelentés
       </button>
     </nav>
   </div>
