--- a/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
+++ b/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
@@ -24,6 +24,9 @@
       <button [disabled]="!penztarenabled()" (click)="penztar()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Pénztár
       </button>
+      <button [disabled]="!fuvarszamlaenabled()" (click)="fuvarszamla()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+        Fuvarszámla
+      </button>
       <button [disabled]="!kiszallitvaenabled()" (click)="kiszallitva()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Kiszállítva
       </button>
@@ -181,6 +184,7 @@
       </app-bizonylat-formaiellenorzes>
     </div>
   </ng-container>
+
   <ng-container *ngIf="EgyMode === 14">
     <div [@rowanimation]>
       <app-bizonylat-letoltesonlineszamlaformatumban [Bizonylatkod]="Dto.Bizonylatkod"
@@ -197,6 +201,11 @@
                      [item]="BizonylatProjektje"
                      [colsets]="projektservice.ReszletekSettings">
       </app-reszletek>
+    </div>
+  </ng-container>
+
+  <ng-container *ngIf="EgyMode === 16">
+    <div [@rowanimation]>
     </div>
   </ng-container>
 </div>
