--- a/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
+++ b/src/app/bizonylat/bizonylattabla/bizonylattabla.component.html
@@ -3,20 +3,41 @@
   <tr>
     <th>Id</th>
     <th>Sorszám</th>
-    <th>Ügyfél és cím</th>
-    <th>Bizonylat kelte</th>
-    <th>Teljesítés kelte</th>
-    <th>Fizetési mód</th>
-    <th>Fizetési határidő</th>
-    <th>Kifizetés rendben</th>
-    <th>Kiszállítva</th>
-    <th>Pénznem</th>
-    <th>Árfolyam</th>
+    <th>
+      <div>Ügyfél</div>
+      <div>Cím</div>
+    </th>
+    <th>
+      <div>Bizonylat kelte</div>
+      <div>Teljesítés kelte</div>
+    </th>
+    <th>
+      <div>Fizetési mód</div>
+      <div>Fizetési határidő</div>
+    </th>
+    <th>
+      <div>Kifizetés rendben</div>
+      <div>Kiszállítva</div>
+    </th>
+    <th>
+      <div>Pénznem</div>
+      <div>Árfolyam</div>
+    </th>
     <th>Netto</th>
     <th>ÁFA</th>
     <th>Brutto</th>
-    <th>Ez stornozo</th>
-    <th>Ez stornozott</th>
+    <th>
+      <div>Ez stornozo</div>
+      <div>Ez stornozott</div>
+    </th>
+    <th>
+      <div>Fuvarszámla</div>
+      <div>Fuvardíj</div>
+    </th>
+    <th>
+      <div>Fuvardíj pénzneme</div>
+      <div>Fuvardíj árfolyama</div>
+    </th>
   </tr>
   </thead>
   <tbody>
@@ -37,21 +58,41 @@
           <div style="width: 250px">{{item.Ugyfelcim}}</div>
         </td>
 
-        <td>{{item.Bizonylatkelte | datehun}}</td>
-        <td>{{item.Teljesiteskelte | datehun}}</td>
-        <td>{{item.Fizetesimod}}</td>
-        <td>{{item.Fizetesihatarido | datehun}}</td>
-        <td>{{item.Kifizetesrendben | boolhun}}</td>
-        <td>{{item.Kiszallitva | boolhun}}</td>
-        <td>{{item.Penznem}}</td>
-        <td style="text-align: right">{{item.Arfolyam | number: '1.2-2'}}</td>
+        <td>
+          <div>{{item.Bizonylatkelte | datehun}}</div>
+          <div>{{item.Teljesiteskelte | datehun}}</div>
+        </td>
+        <td>
+          <div>{{item.Fizetesimod}}</div>
+          <div>{{item.Fizetesihatarido | datehun}}</div>
+        </td>
+        <td>
+          <div *ngIf="item.Kifizetesrendben">igen</div>
+          <div *ngIf="item.Kifizetesrendben"></div>
+          <div *ngIf="item.Kiszallitva">igen</div>
+          <div *ngIf="item.Kiszallitva"></div>
+        </td>
+        <td>
+          <div>{{item.Penznem}}</div>
+          <div style="text-align: right">{{item.Arfolyam | number: '1.2-2'}}</div>
+        </td>
         <td style="text-align: right">{{item.Netto | number: '1.2-2'}}</td>
         <td style="text-align: right">{{item.Afa | number: '1.2-2'}}</td>
         <td style="text-align: right">{{item.Brutto | number: '1.2-2'}}</td>
-        <td *ngIf="item.Ezstornozo">igen</td>
-        <td *ngIf="!item.Ezstornozo"></td>
-        <td *ngIf="item.Ezstornozott">igen</td>
-        <td *ngIf="!item.Ezstornozott"></td>
+        <td>
+          <div *ngIf="item.Ezstornozo">igen</div>
+          <div *ngIf="item.Ezstornozo"></div>
+          <div *ngIf="item.Ezstornozott">igen</div>
+          <div *ngIf="item.Ezstornozott"></div>
+        </td>
+        <td>
+          <div></div>
+          <div></div>
+        </td>
+        <td>
+          <div></div>
+          <div></div>
+        </td>
       </tr>
       <tr *ngIf="item.Megjegyzesfej || '' !== ''" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
         <td colspan="100">{{item.Megjegyzesfej}}</td>
