--- a/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
+++ b/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
@@ -1,7 +1,52 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Új vagy felülírás</h5>
-  <div class="row no-gutters" style="margin-bottom: 10px">
-    <button class="btn btn-sm btn-primary" (click)="doOk()">Ok</button>
-    <button class="btn btn-sm btn-default" style="margin-left:3px;" (click)="doCancel()">Mégsem</button>
-  </div>
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
+    <div class="row no-gutters editform-row">
+      <div style="display: inline-block; margin-right: 5px">
+        <div class="egylabel">Fuvarszámla</div>
+        <input type="text" class="form-control form-control-sm oszlop3" id="bizonylatszam"
+               maxlength="100" required autocomplete="off" style="background-color: aquamarine; display: inline-block"
+               [(ngModel)]="Fuvarszamla" name="bizonylatszam">
+        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px; display: inline-block" type="button" (click)="BizonylatZoom()">...</button>
+      </div>
+    </div>
+
+    <div class="row no-gutters editform-row">
+      <div style="margin-right: 5px">
+        <div class="egylabel">Fuvardíj</div>
+        <input type="text" class="form-control form-control-sm oszlop3" id="fuvardij"
+               maxlength="20" required autocomplete="off"
+               [(ngModel)]="Fuvardij" name="fuvardij">
+      </div>
+    </div>
+
+    <div class="row no-gutters editform-row">
+      <div style="margin-right: 5px">
+        <div class="egylabel">Fuvardíj pénzneme</div>
+        <input type="text" class="form-control form-control-sm oszlop3" id="fuvardijpenzneme"
+               maxlength="20" required autocomplete="off" readonly
+               [(ngModel)]="Fuvardijpenzneme" name="fuvardijpenzneme">
+      </div>
+    </div>
+
+    <div class="row no-gutters editform-row">
+      <div style="margin-right: 5px">
+        <div class="egylabel">Fuvardíj árfolyama</div>
+        <input type="text" class="form-control form-control-sm oszlop3" id="fuvardijarfolyama"
+               maxlength="20" required autocomplete="off" readonly
+               [(ngModel)]="Fuvardijarfolyama" name="fuvardijarfolyama">
+      </div>
+    </div>
+
+    <div class="row no-gutters editform-row">
+      <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="doCancel()">Mégsem</button>
+    </div>
+  </form>
+
+  <ng-container *ngIf="SzerkesztesMode === 1">
+    <app-bizonylat-zoom>
+
+    </app-bizonylat-zoom>
+  </ng-container>
 </div>
