HMKE tulajdonos hozzájárulás

--- a/src/app/projekt/projekt-iratminta/projekt-iratminta.component.html
+++ b/src/app/projekt/projekt-iratminta/projekt-iratminta.component.html
@@ -14,6 +14,9 @@
       <button (click)="oftszerzodes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         OFT szerződés
       </button>
+      <button (click)="hmketulajdonoshozzajarulas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+        HMKE tulajdonos hozzájárulás
+      </button>
       <button (click)="munkalap()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Munkalap
       </button>
