--- a/src/app/particio/particio-projekt/particio-projekt.component.html
+++ b/src/app/particio/particio-projekt/particio-projekt.component.html
@@ -94,6 +94,15 @@
     </div>
 
     <div class="row no-gutters editform-row">
+      <div>
+        <div class="egylabel">HMKE tulajdonos hozzájárulás iratkód</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="m11"
+               autocomplete="off"
+               [(ngModel)]="cProjekt.HMKEtulajdonoshozzajarulasIratkod" name="m11">
+      </div>
+    </div>
+
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
