--- a/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
+++ b/src/app/bizonylat/bizonylat-fuvarszamla/bizonylat-fuvarszamla-uj/bizonylat-fuvarszamla-uj.component.html
@@ -45,7 +45,8 @@
   </form>
 
   <ng-container *ngIf="SzerkesztesMode === 1">
-    <app-bizonylat-zoom>
+    <app-bizonylat-zoom [maszk]="Fuvarszamla"
+                        (eventStopzoom)="eventStopZoom()">
 
     </app-bizonylat-zoom>
   </ng-container>
