12 működik assests/ossspa könyvtár

--- a/src/app/ugyfelter/ugyfelter/ugyfelter.component.html
+++ b/src/app/ugyfelter/ugyfelter/ugyfelter.component.html
@@ -1,7 +1,7 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Ügyféltér</h5>
 
-  <img src="assets/gsg.jpg" style="margin-top: 8px;margin-bottom: 8px" alt="GSG">
+  <img src="assets/ossspa/gsg.jpg" style="margin-top: 8px;margin-bottom: 8px" alt="GSG">
 
   <ng-container *ngIf="!bejelentkezve">
     <p>Üdvözöljük, ön a GridSolar Group Kft. informatikai rendszerét (OSS) használja. Kérjük a levélben kapott linket kezelje bizalmasan!</p>
