--- a/src/app/fooldal/fooldal.component.html
+++ b/src/app/fooldal/fooldal.component.html
@@ -1,4 +1,4 @@
-<img src="assets/fooldal.png" class="hatterkep" #hatterkep>
+<img src="assets/ossspa/fooldal.png" class="hatterkep" #hatterkep>
 
 
 
